@@ -219,6 +219,7 @@ extern "C" {
 #define TBSTYLE_CHECKGROUP	(TBSTYLE_GROUP|TBSTYLE_CHECK)
 #define TBSTYLE_TOOLTIPS	256
 #define TBSTYLE_WRAPABLE	512
+#define TBSTYPE_FLAT	0x0800
 #define TBSTYLE_ALTDRAG	1024
 #define TB_ENABLEBUTTON	(WM_USER+1)
 #define TB_CHECKBUTTON	(WM_USER+2)
@@ -233,6 +234,7 @@ extern "C" {
 #define TB_SETSTATE	(WM_USER+17)
 #define TB_GETSTATE	(WM_USER+18)
 #define TB_ADDBITMAP	(WM_USER+19)
+#define TB_GETBUTTONSIZE	(WM_USER+58)
 #define HINST_COMMCTRL	((HINSTANCE)-1)
 #define IDB_STD_SMALL_COLOR	0
 #define IDB_STD_LARGE_COLOR	1
@@ -767,6 +769,7 @@ extern "C" {
 #define TCS_BOTTOM	2
 #define TCS_RIGHT	2
 #define TCS_VERTICAL	128
+#define TCS_HOTTRACK	0x0040
 #endif
 #define TCIF_TEXT	1
 #define TCIF_IMAGE	2
